// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          aria-disabled="false"
          class="uv_17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="uv_17da2jl6"
            id="_r_0_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
            for="_r_0_"
          >
            Radio field
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          aria-disabled="false"
          class="uv_17da2jl2"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_17da2jl6"
            id="_r_8_"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="uv_17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
            for="_r_8_"
          >
            Radio field checked
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          aria-disabled="true"
          class="uv_17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="uv_17da2jl6"
            disabled=""
            id="_r_5_"
            name="test"
            type="radio"
            value="disabled"
          />
          <svg
            class="uv_17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
            for="_r_5_"
          >
            Radio field disabled
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly with aria-label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          aria-disabled="false"
          class="uv_17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="Radio field"
            class="uv_17da2jl6"
            id="_r_3_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          aria-disabled="false"
          class="uv_17da2jl2"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="uv_17da2jl6"
            id="_r_b_"
            name="test"
            type="radio"
            value="events"
          />
          <svg
            class="uv_17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
            for="_r_b_"
          >
            Radio field events
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
